--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,8 @@
         <link rel="stylesheet" href="navStyle.css">
         <link rel="stylesheet" href="formsHolder.css">
         <link rel="stylesheet" href="restartPassword.css">
+        <link rel="stylesheet" href="socialMedia.css">
+
 
 
         <script src="script.js"></script>
@@ -155,7 +157,51 @@
         
         <div class="BackgroundImage" id="BackgroundImage"></div>
 
-
+          <div class="login-wrap">
+      <div class="login-html">
+          <input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign Up</label>
+          <input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign In</label>
+          <!-- <input id="tab-3" type="radio" name="tab" class="sign-up"><label for="tab-3" class="tab">Forgot Password</label> -->
+          <div class="login-form">
+              <div class="sign-in-htm">
+                  <form method="POST" action="">
+                      <div class="subtitle">Let's create your account!</div>
+                      <div class="input-container ic1 ">
+                          <input type="text" id="inputName" class="input" maxlength="28" type="text" placeholder=" " />
+                          <div class="cut" style="width: 85px;"></div>
+                          <label for="firstname" class="placeholder">First name</label>
+                      </div>
+                      <div class="input-container ic2 ">
+                          <input type="text" id="inputLanme" class="input" maxlength="38" placeholder=" " />
+                          <div class="cut" style="width: 80px;"></div>
+                          <label for="lastname" class="placeholder">Last name</label>
+                      </div>
+                      <div class="input-container ic2 ">
+                          <input type="text" id="inputEmail" class="input" maxlength="28" placeholder=" " />
+                          <div class="cut cut-short"></div>
+                          <label for="email" class="placeholder">Email</>
+                      </div>
+                      <div class="input-container ic2 ">
+                          <input type="number" id="phonNumber" class="input" oninput="this.value = this.value.replace(/[^0-9.]/g, '').replace(/(\..*?)\..*/g, '$1');" maxlength="15" placeholder=" " />
+                          <div class="cut cut-short" style="width: 55px;"></div>
+                          <label for="Phone" class="placeholder">Phone</>
+                      </div>
+                      <div class="input-container ic2 ">
+                          <input type="password" id="inputPassword" class="input" maxlength="12" placeholder=" " />
+                          <div class="cut" style="width: 80px;"></div>
+                          <label for="password" class="placeholder">Password</>
+                      </div>
+                      <div class="input-container ic2 ">
+                          <input type="password" id="inputRePassword" class="input" maxlength="12" placeholder=" " />
+                          <div class="cut" style="width: 130px;"></div>
+                          <label for="password" class="placeholder">Repeat Password</>
+                      </div>
+                      <button type="button" class="submit" id="btn" onclick="validate();">Register</button>
+      
+                      <div class="input-container ic3" id="outputMessage">
+                          <h6 class="placeholderoutput"></h6>
+                      </div>
+                  </form>
 
                   <div class="hr"></div>
                   <div class="foot-lnk">
