--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -20,7 +20,8 @@
         <script src="userProfileEditField.js"></script>
         <script src="logout.js"></script>
         <script src="fetchData.js"></script>
-            
+        <script src="profileImage.js"></script>
+
 
         <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -172,7 +173,8 @@
                             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
                             <div class="file btn btn-lg btn-primary">
                                 Change Photo
-                                <input type="file" name="file"/>
+                                <input id="fileupload" type="file" name="fileupload" oninput="uploadFile();" />
+
                             </div>
                         </div>
                     </div>
