--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog" alt=""/>
+                            <img src="photo.png" alt=""/>
                             <div class="file btn btn-lg btn-primary">
                                 Change Photo
                                 <input id="fileupload" type="file" name="fileupload" oninput="uploadFile();" />
