--- a/templates/css/userProfile.css
+++ b/templates/css/userProfile.css
@@ -1,11 +1,12 @@
 body{
   background: -webkit-linear-gradient(left, #3931af, #00c6ff);
 }
+
 .emp-profile{
   padding: 3%;
   margin-top: 3%;
   margin-bottom: 3%;
-  border-radius: 0.5rem;
+  border-radius: 50px;
   background: #fff;
 }
 .profile-img{
@@ -75,7 +76,7 @@ body{
 }
 .profile-work{
   padding: 14%;
-  margin-top: -15%;
+  /* margin-top: -15%; */
 }
 .profile-work p{
   font-size: 12px;
