--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -170,7 +170,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="profile-img">
-                            <img src="photo.png" id="userProfileIMG" alt="Users profile image"/>
+                            <img src="https://res.cloudinary.com/dt5xxftc5/image/upload/v1666083277/webApp/photo_q4cq9t.png" id="userProfileIMG" alt="Users profile image"/>
                             <div class="file btn btn-lg btn-primary">
                                 Change Photo
                                 <input id="fileupload" type="file" name="fileupload" oninput="uploadFile();" />
@@ -223,7 +223,7 @@
                                     <form>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>User Id</label>
+                                                <label>User id</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p id="userID">Kshiti123</p>
@@ -232,11 +232,20 @@
                                         </div>
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Name</label>
+                                                <label>name</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p id="userName">Kshiti Ghelani</p>
                                                 <input type="text" value="" id="userNameInput" class="form-control hide">
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-md-6">
+                                                <label>Last name</label>
+                                            </div>
+                                            <div class="col-md-6">
+                                                <p id="userProf">Web Developer and Designer</p>
+                                                <input type="text" value="" id="userProfInput" class="form-control hide">
                                             </div>
                                         </div>
                                         <div class="row">
@@ -257,15 +266,7 @@
                                                 <input type="text" value="" id="userPhoneInput" class="form-control hide">
                                             </div>
                                         </div>
-                                        <div class="row">
-                                            <div class="col-md-6">
-                                                <label>Profession</label>
-                                            </div>
-                                            <div class="col-md-6">
-                                                <p id="userProf">Web Developer and Designer</p>
-                                                <input type="text" value="" id="userProfInput" class="form-control hide">
-                                            </div>
-                                        </div>
+
                                         
                                     </form>
                             </div>
