--- a/templates/setupUserProfile.html
+++ b/templates/setupUserProfile.html
@@ -6,6 +6,7 @@
         </title>
         <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
         <link rel="shortcut icon" href="#">
+        <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
 
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
@@ -62,19 +63,19 @@
                                     <!-- Step 1 input fields -->
                                     <div class="mt-3">
                                         <div class="sep">
-                                            <label for="firstName">First Name<span style="color: red;">*</span></label>
-                                            <input type="text" id="firstName" class="form-control" placeholder="Enter firstName" oninput="stepsForm();">
+                                            <label for="UserFirstName">First Name<span style="color: red;">*</span></label>
+                                            <input type="text" id="UserFirstName" class="form-control" placeholder="Enter firstName" oninput="stepsForm();">
                                         </div>
                                         <div class="sep">
-                                            <label for="lastName">Last Name<span style="color: red;">*</span></label>
-                                            <input type="text" id="lastName" class="form-control" placeholder="Enter lastName">
+                                            <label for="UserLastName">Last Name<span style="color: red;">*</span></label>
+                                            <input type="text" id="UserLastName" class="form-control" placeholder="Enter lastName">
                                         </div>
                                         <div class="sep">
-                                            <label for="phone">Phone<span style="color: red;">*</span></label>
-                                            <input type="text" id="phone" class="form-control" placeholder="Enter phone">
+                                            <label for="UserNumber">Phone<span style="color: red;">*</span></label>
+                                            <input type="text" id="UserNumber" class="form-control" placeholder="Enter phone">
                                         </div>
                                         <div class="sep">
-                                            <label for="firstName">Title</label>
+                                            <label for="title">Title</label>
                                             <input type="text" id="title" class="form-control" placeholder="Enter title">
                                         </div>
                                         <div class="sep">
