--- a/templates/userProfile.html
+++ b/templates/userProfile.html
@@ -180,8 +180,21 @@
                     </div>
                     <div class="col-md-6">
                         <div class="profile-head">
-                                    <h5>
-                                        Kshiti Ghelani
+                                    <h5 style="font-size: 20px;">
+                                        <div style="display: block ruby;">
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <p id="userName">Kshiti Ghelani</p>
+                                                    <input type="text" value="" id="userNameInput" class="form-control fl-name hide" style="width: 200px;">
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-md-6">
+                                                    <p id="userProf">Web Developer and Designer</p>
+                                                    <input type="text" value="" id="userProfInput" class="form-control fl-name hide" style="width: 200px;">
+                                                </div>
+                                            </div>
+                                        </div>
                                     </h5>
                                     <h6>
                                         Web Developer and Designer
@@ -230,7 +243,7 @@
                                                 <input type="text" value="" id="userIDInput" class="form-control hide">
                                             </div>
                                         </div>
-                                        <div class="row">
+                                        <!-- <div class="row">
                                             <div class="col-md-6">
                                                 <label>name</label>
                                             </div>
@@ -247,10 +260,10 @@
                                                 <p id="userProf">Web Developer and Designer</p>
                                                 <input type="text" value="" id="userProfInput" class="form-control hide">
                                             </div>
-                                        </div>
+                                        </div> -->
                                         <div class="row">
                                             <div class="col-md-6">
-                                                <label>Email</label>
+                                                <label>Contact email</label>
                                             </div>
                                             <div class="col-md-6">
                                                 <p id="userEmail">kshitighelani@gmail.com</p>
